//
// Protocol buffers definition for Dadkvs Sequencer
//
syntax = "proto3";
package dadkvs;

message SendSeqNumberRequest {
  int32 reqid = 1;
  int32 seqNumber = 2;
}

message SendSeqNumberReply {
    int32 reqid = 1;
    bool  accepted = 2;
}

service DadkvsSequencerService {
  rpc sendseqnumber (SendSeqNumberRequest) returns (SendSeqNumberReply);
}
